# epitran.rs

./: .gitignore  Cargo.toml  LICENSE  README.md  fix_m2m_unwraps.py  proposal.md
m2mfstaligner/: Cargo.toml
m2mfstaligner/src/: M2MFstAligner.rs  lib.rs  utils.rs
parserule/: .gitignore  Cargo.toml
parserule/src/: graphemeparse.rs  langfst.rs  lib.rs  main.rs  mapparse.rs  normalize.rs  rulefst.rs  ruleparse.rs  utils.rs
rsepitran/: Cargo.toml  EPITRAN_README.md  TESTING.md  build.rs
rsepitran/data/map/: aar-Latn.csv  afr-Latn.csv  aii-Syrc.csv  amh-Ethi-pp.csv  amh-Ethi-red.csv  amh-Ethi.csv  ara-Arab.csv  ava-Cyrl.csv  ben-Beng-east.csv  ben-Beng-red.csv  ben-Beng.csv  bho-Deva.csv  bxk-Latn.csv  ceb-Latn.csv  ces-Latn.csv  cjy-Latn.csv  ckb-Arab.csv.excl  cmn-Latn.csv  count_langs.py  csb-Latn.csv  deu-Latn-nar.csv  deu-Latn.csv  epo-Latn.csv  est-Latn.csv  fas-Arab.csv  fin-Latn.csv  fra-Latn-rev.csv  fra-Latn.csv  ful-Latn.csv  gan-Latn.csv  generic-Latn.csv  glg-Latn.csv  got-Goth.csv  got-Latn.csv  hak-Latn.csv.excl  hat-Latn-bab.csv  hau-Latn.csv  hin-Deva.csv  hmn-Latn.csv  hrv-Latn.csv  (+96 more)
rsepitran/data/post/: ben-Beng.txt  deu-Latn.txt  fin-Latn.txt  spa-Latn.txt
rsepitran/data/pre/: deu-Latn.txt  epo-Latn.txt
rsepitran/data/tests/: -tests.csv  ara_Arab-tests.csv  ben_Beng-tests.csv  bho_Deva-tests.csv  ckb_Arab-tests.csv  deu_Latn-tests.csv  epo_Latn-tests.csv  est_Latn-tests.csv  fas_Arab-tests.csv.excl  fin_Latn-tests.csv  fra_Latn-tests.csv  glg_Latn-tests.csv  hin_Deva-tests.csv  hun_Latn-tests.csv  kor_Hang-tests.csv  lao_Laoo-tests.csv  lav_Latn-tests.csv  lit_Latn-tests.csv  lug_Latn-tests.csv  mal_Mlym-tests.csv  mya_Mymr-tests.csv  nld_Latn-tests.csv  pan_Guru-tests.csv  pol_Latn-tests.csv  por_Latn-tests.csv  quy_Latn-tests.csv  rus_Cyrl-tests.csv  sin_Sinh-tests.csv  slv_Latn-tests.csv  spa_Latn-tests.csv  sro_Latn-tests.csv  swe_Latn-tests.csv  tam_Taml-tests.csv  tel_Telu-tests.csv  tha_Thai-tests.csv  tok_Latn-tests.csv  tur_Latn-tests.csv  ukr_Cyrl-tests.csv  uzb_Latn-tests.csv  yue_Latn-tests.csv  (+1 more)
rsepitran/src/: epitran.rs  lib.rs  main.rs  tokenize.rs
rsepitran/tests/: integration_nfd_test.rs
