[package]
name = "parserule"
version = "0.1.0"
edition = "2021"
authors = ["David R. Mortensen <dmortens@cs.cmu.edu>"]
description = "Parser for string rewrite rules using PCRE-like regular expression notations"
keywords = ["linguistics", "phonology", "re-write", "g2p", "parse"]
license = "MIT"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Downgraded from 8.0.0 to 7.1.3 for compatibility with symbol learning features
nom = {version = "7.1.3", features = ["alloc"] }
rustfst.workspace = true
anyhow.workspace = true
itertools = "0.14.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
colored = "3.0.0"
clap = { version = "4.5.40", features = ["derive"] }
tabled = "0.20.0"

[profile.release]
debug = true

[[bin]]
name = "parse_script"
path = "src/main.rs"
